--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["src/*"]
+    },
+    "allowJs": true
   },
   "exclude": ["node_modules", "dist"]
 }
